#11 Tests projects 1 and 3

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Python_Essentials_for_MLOps/project01/files
 /Python_Essentials_for_MLOps/project01/__pycache__
 /Python_Essentials_for_MLOps/project01/.pytest_cache
+/Python_Essentials_for_MLOps/project03/__pycache__
+/Python_Essentials_for_MLOps/project03/.pytest_cache
