#14 update tests projects 2 and 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /mlops_env
+/env2
 /Python_Essentials_for_MLOps/project01/files
 /Python_Essentials_for_MLOps/project01/__pycache__
 /Python_Essentials_for_MLOps/project01/.pytest_cache
+/Python_Essentials_for_MLOps/project02/tests/__pycache__
+/Python_Essentials_for_MLOps/project02/tests/.pytest_cache
 /Python_Essentials_for_MLOps/project03/__pycache__
 /Python_Essentials_for_MLOps/project03/.pytest_cache
